Jetty Client
Signed-off-by: Jan N. Klug <github@klug.nrw>